--- a/jmai_api/.env
+++ b/jmai_api/.env
@@ -7,3 +7,7 @@ DB_HOST = db.wrkgzzaommbcvqrttexk.supabase.co
 DB_DATABASE = postgres
 DB_PASSWORD = vVOYvwLcfG7t9xvh
 DB_PORT = 5432
+
+#GMAIL KEYS
+EMAIL_SENDER = ruimbzurc@gmail.com
+EMAIL_PASSWORD = wdsq dtan sfdd pbxz
