--- a/jmai_api/.env
+++ b/jmai_api/.env
@@ -11,3 +11,8 @@ DB_PORT = 5432
 #GMAIL KEYS
 EMAIL_SENDER = ruimbzurc@gmail.com
 EMAIL_PASSWORD = wdsq dtan sfdd pbxz
+
+#CLICKSEND KEYS
+CLICKSEND_USERNAME = team.maravilha.jmai@gmail.com
+CLICKSEND_PASSWORD = Team.Maravilha.3
+CLICKSEND_API_KEY = AEAB0462-B4BF-8963-8A76-040AF9F5F11E
