Rececionista (Avaliar Requerimento) + Médico (Avaliar Requerimentos))
Rececionista (Avaliar Requerimento) + Médico (Avaliar Requerimentos))

--- a/jmai_api/.env
+++ b/jmai_api/.env
@@ -9,8 +9,8 @@ DB_PASSWORD = vVOYvwLcfG7t9xvh
 DB_PORT = 5432
 
 #GMAIL KEYS
-EMAIL_SENDER = ruimbzurc@gmail.com
-EMAIL_PASSWORD = wdsq dtan sfdd pbxz
+EMAIL_SENDER = team.maravilha.jmai@gmail.com
+EMAIL_PASSWORD = stej hptw vjjz xtux
 
 #CLICKSEND KEYS
 CLICKSEND_USERNAME = team.maravilha.jmai@gmail.com
